# CoinGoat

./: .env.example  CLAUDE.md  next.config.ts  package-lock.json  package.json  render.yaml  sanity.cli.ts  sanity.config.ts
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_articles_table.py  0002_expand_multi_source_schema.py  0003_drop_legacy_article_columns.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: articles.py  health.py  homepage.py
backend/app/core/: cache_keys.py  config.py  logging.py  redis.py
backend/app/db/: session.py
backend/app/models/: article.py  article_source.py  news_source.py
backend/app/repositories/: article_repository.py  news_source_repository.py
backend/app/schemas/: article.py
backend/app/services/: cache_refresh.py  category_normalizer.py  deduplication.py  news_source_service.py  slug_generator.py
backend/coingate/: package-lock.json  package.json  sanity.cli.ts  sanity.config.ts
backend/scripts/: seed_news_sources.py
backend/tests/: conftest.py  test_category_normalizer.py  test_deduplication.py  test_normalize.py  test_slug_generator.py
backend/tests/fixtures/: sample_coindesk_feed.xml
backend/worker/: celery_app.py  feed_client.py  locking.py  normalize.py  tasks.py
sanity/schemaTypes/: author.ts  index.ts  post.ts
src/: proxy.ts
src/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  (+1 more)
(+116 files in other folders)
